deploy/kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: proxy-gzip-somewhere
  namespace: utils
  labels:
    app: proxy-gzip
    for: reasons
    type: proxy
spec:
  replicas: 2
  template:
    metadata:
      name: proxy-gzip-somewhere
      namespace: utils
      labels:
        app: proxy-gzip
        for: reasons
        type: proxy
    spec:
      containers:
      - name: proxy-gzip-somewhere
        image: zephinzer/proxy-gzip:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        ports:
        - containerPort: 1337
