deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-gzip-somewhere
  namespace: utils
  labels:
    app: proxy-gzip-somewhere
    for: reasons
    type: proxy
spec:
  selector:
    app: proxy-gzip-somewhere
    for: reasons
    type: proxy
  ports:
  - name: main-http
    port: 1337
    targetPort: 1337
