deploy/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy-gzip-somewhere
  namespace: utils
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - somehost.somedomain.com
    secretName: your-tls-secret
  rules:
  - host: somehost.somedomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: proxy-gzip-somewhere
          servicePort: main-http
